--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "Myfp"
+
+repositories {
+    mavenCentral()
+}
+dependencies {
+    compile 'org.testng:testng:6.10'
+}
